add training center

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width:600px)">
     <link rel="stylesheet" href="./css/desktop.css" media="(min-width:1000px)">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Volkhov:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header">
@@ -20,10 +23,6 @@
             
     </header>
     <main id="main">
-        <section>
-            
-        </section>
-  
         <section  class="main-container">
             <div class="container--title">
                 <h2>Proyects</h2>
@@ -43,12 +42,220 @@
             </div>
             <section class="container--slider">
                 <article class="container--card">
+                    <a href="training.html#conceptdesign">
+                        <img src="" alt="Concept Desing">
+                        <div class="overlay">
+                            <p>Concept Desing</p>
+                        </div>
+                    </a>
                 </article>
                 <article class="container--card">
+                    <a href="training.html#productiondesign">
+                        <img src="" alt="Production Design">
+                        <div class="overlay">
+                            <p>Production Design</p>
+                        </div>
+                    </a>
                 </article>
                 <article class="container--card">
+                    <a href="training.html#diegetic">
+                        <img src="" alt="The Art as a diegetic resource">
+                        <div class="overlay">
+                            <p>The Art as a diegetic resource</p>
+                        </div>
+                    </a>
                 </article>
                 <article class="container--card">
+                    <a href="training.html#audiovisualnarrative">
+                        <img src="" alt="Audiovisual narrative for animation and montage">
+                        <div class="overlay">
+                            <p>Audiovisual narrative</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#animatic">
+                        <img src="" alt="The animatic in animation">
+                        <div class="overlay">
+                            <p>The animatic in animation</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#makerspace">
+                        <img src="" alt="Maker Space">
+                        <div class="overlay">
+                            <p>Maker Space</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#smpuppet">
+                        <img src="" alt="Stop Motion Puppet Molding">
+                        <div class="overlay">
+                            <p>Stop Motion Puppet Molding</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#smwardrobe">
+                        <img src="" alt="Stop Motion Wardrobe design introduction">
+                        <div class="overlay">
+                            <p>Stop Motion Wardrobe design</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#paintingpuppet">
+                        <img src="" alt="Painting for Stop Motion Puppets">
+                        <div class="overlay">
+                            <p>Painting for Stop Motion Puppets</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#miniaturespace">
+                        <img src="" alt="The miniature space: design and construction for stop motion sets">
+                        <div class="overlay">
+                            <p>The miniature space</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#sets">
+                        <img src="" alt="Creation for Stop Motion Sets">
+                        <div class="overlay">
+                            <p>Creation for Stop Motion Sets</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#setsprops">
+                        <img src="" alt="Sets and props fabrication">
+                        <div class="overlay">
+                            <p>Sets and props fabrication</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#3dmodeling">
+                        <img src="" alt="3D Modeling">
+                        <div class="overlay">
+                            <p>3D Modeling</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#scheduling">
+                        <img src="" alt="Scheduling for Stop Motion Productions">
+                        <div class="overlay">
+                            <p>Scheduling for Stop Motion</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#budgeting">
+                        <img src="" alt="Budgeting and pipeline">
+                        <div class="overlay">
+                            <p>Budgeting and pipeline</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#toonboom">
+                        <img src="" alt="Toon Boom Harmony">
+                        <div class="overlay">
+                            <p>Toon Boom Harmony</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#sm1">
+                        <img src="" alt="Stop Motion Character Animation: Level 1">
+                        <div class="overlay">
+                            <p>Stop Motion: Level 1</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#sm2">
+                        <img src="" alt="Stop Motion Character Animation: Level 2">
+                        <div class="overlay">
+                            <p>Stop Motion: Level 2</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#sm3">
+                        <img src="" alt="Stop Motion Character Animation: Level 3">
+                        <div class="overlay">
+                            <p>Stop Motion: Level 3</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#sm">
+                        <img src="" alt="Stop Motion Animation">
+                        <div class="overlay">
+                            <p>Stop Motion Animation</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#toolkit">
+                        <img src="" alt="Photography Toolkit for Stop Motion Animation">
+                        <div class="overlay">
+                            <p>Photography Toolkit</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#smcinema">
+                        <img src="" alt="Stop Motion Cinematography">
+                        <div class="overlay">
+                            <p>Stop Motion Cinematography</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#musicalcompo">
+                        <img src="" alt="Musical composition for animation">
+                        <div class="overlay">
+                            <p>Musical composition</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#post">
+                        <img src="" alt="The Postproduction Supervisor Role in the creation of streaming platforms content">
+                        <div class="overlay">
+                            <p>Postproduction</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#bsmpuppets">
+                        <img src="" alt="Basic Stop Motion Puppets">
+                        <div class="overlay">
+                            <p>Puppets</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#hair">
+                        <img src="" alt="Hair for Stop Motion Puppets">
+                        <div class="overlay">
+                            <p>Hair for Puppets</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#smkids">
+                        <img src="" alt="Stop motion kids">
+                        <div class="overlay">
+                            <p>Stop motion kids</p>
+                        </div>
+                    </a>
                 </article>
             </section>
             <div class="container--title">
@@ -75,7 +282,7 @@
     <footer>
         <section class="container-footer">     
                 <ul>
-                    <li>Contact:<a href="mailto:info@tallerdelchucho.com">info@tallerdelchucho.com </a></li>
+                    <li>Contact: <a href="mailto:info@tallerdelchucho.com">info@tallerdelchucho.com </a></li>
                     <li>Web: <a href="http://www.tallerdelchucho.com/">https://www.tallerdelchucho.com/</a></li>
                     <li>Location: <a href="http://">Av. Hugo Vázquez Reyes N°39, int. 23,Parque Industrial Belenes, C.P. 45150 Zapopan, Jalisco, México.</a></li>
                 </ul>
