add page of service

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width:600px)">
     <link rel="stylesheet" href="./css/desktop.css" media="(min-width:1000px)">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Volkhov:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header">
@@ -263,12 +260,76 @@
             </div>
             <section class="container--slider">
                 <article class="container--card">
+                    <a href="services.html#service_sm">
+                        <img src="" alt="Services for stop motion animation productions">
+                        <div class="overlay">
+                            <p>Stop motion productions</p>
+                        </div>
+                    </a>
                 </article>
                 <article class="container--card">
+                    <a href="services.html#service_3d">
+                        <img src="" alt="3D Engineering">
+                        <div class="overlay">
+                            <p>3D Engineering</p>
+                        </div>
+                    </a>
                 </article>
                 <article class="container--card">
+                    <a href="services.html#service_cut">
+                        <img src="" alt="Cut and renders">
+                        <div class="overlay">
+                            <p>Cut and renders</p>
+                        </div>
+                    </a>
                 </article>
                 <article class="container--card">
+                    <a href="services.html#service_modeling">
+                        <img src="" alt="Modeling, molds and castings (in resins, silicones and foams)">
+                        <div class="overlay">
+                            <p>Modeling</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="services.html#service_museo">
+                        <img src="" alt="Services for museographic, educational and entertainment experiences">
+                        <div class="overlay">
+                            <p>museographic</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="services.html#service_artis">
+                        <img src="" alt="Services for artistic events, shows and audiovisual projects">
+                        <div class="overlay">
+                            <p>artistic events</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="services.html#course_audio">
+                        <img src="" alt="Audiovisual services">
+                        <div class="overlay">
+                            <p>Audiovisual</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="services.html#service_it">
+                        <img src="" alt="Infrastructure for high processing performance">
+                        <div class="overlay">
+                            <p>Infrastructure</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="services.html#service_hos">
+                        <img src="" alt="Hosting of productions and equipment rental">
+                        <div class="overlay">
+                            <p>Hosting of productions</p>
+                        </div>
+                    </a>
                 </article>
             </section>
         </section>
