add services and trainig img

--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
         <section>
             <article id="service_sm" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/NOSOTROS.jpg" alt="Services for stop motion animation productions">
                 </div>
                 <div class="course-container--text">
                     <h2>Services for stop motion animation productions</h2>
@@ -38,7 +38,7 @@
             </article>
             <article id="service_3d" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/3D_print.jpg" alt="3D Engineering">
                 </div>
                 <div class="course-container--text">
                     <h2>3D Engineering</h2>
@@ -56,7 +56,7 @@
             </article>
             <article id="service_cut" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/1G1A3930.JPG" alt="Cut and renders">
                 </div>
                 <div class="course-container--text">
                     <h2>Cut and renders</h2>
@@ -69,7 +69,7 @@
             </article>
             <article id="service_modeling" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/6V0A3820.JPG" alt="Modeling, molds and castings (in resins, silicones and foams)">
                 </div>
                 <div class="course-container--text">
                     <h2>Modeling, molds and castings (in resins, silicones and foams)</h2>
@@ -81,7 +81,7 @@
             </article>
             <article id="service_museo" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/ludoteca.jpg" alt="Services for museographic, educational and entertainment experiences">
                 </div>
                 <div class="course-container--text">
                     <h2>Services for museographic, educational and entertainment experiences</h2>
@@ -95,7 +95,7 @@
             </article>
             <article id="service_artis" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/1G1A4452.JPG" alt="Services for artistic events, shows and audiovisual projects">
                 </div>
                 <div class="course-container--text">
                     <h2>Services for artistic events, shows and audiovisual projects</h2>
@@ -107,7 +107,7 @@
             </article>
             <article id="course_audio" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/6V0A3707.JPG" alt="Audiovisual services">
                 </div>
                 <div class="course-container--text">
                     <h2>Audiovisual services for:</h2>
@@ -122,7 +122,7 @@
             </article>
             <article id="service_it" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/Data.jpg" alt="Infrastructure">
                 </div>
                 <div class="course-container--text">
                     <h2>Infrastructure for high processing performance</h2>
@@ -136,7 +136,7 @@
             </article>
             <article id="service_hos" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Services/1F1A1948.JPG" alt="">
                 </div>
                 <div class="course-container--text">
                     <h2>Hosting of productions and equipment rental</h2>
