--- a/training.html
+++ b/training.html
@@ -87,7 +87,7 @@
         <section>
             <article id="conceptdesign" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1I1A3455.JPG" alt="Production Design image">
                 </div>
                 <div class="course-container--text">
                     <h2>Concept Design: Creating Characters</h2>
@@ -96,7 +96,7 @@
             </article>
             <article id="productiondesign" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/6V0A1889.JPG" alt="Production Design">
                 </div>
                 <div class="course-container--text">
                     <h2>Production Design</h2>
@@ -105,7 +105,7 @@
             </article>
             <article id="diegetic" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1G1A3777.JPG" alt="The Art as a diegetic resource">
                 </div>
                 <div class="course-container--text">
                     <h2>The Art as a diegetic resource: introduction to the art direction</h2>
@@ -114,7 +114,7 @@
             </article>
             <article id="audiovisualnarrative" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/IMG_0298.JPG" alt="Audiovisual narrative for animation and montage">
                 </div>
                 <div class="course-container--text">
                     <h2>Audiovisual narrative for animation and montage</h2>
@@ -123,7 +123,7 @@
             </article>
             <article id="animatic" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1G1A2155.jpg" alt="The animatic in animation">
                 </div>
                 <div class="course-container--text">
                     <h2>The animatic in animation</h2>
@@ -132,7 +132,7 @@
             </article>
             <article id="makerspace" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/homie.png" alt="Maker Space">
                 </div>
                 <div class="course-container--text">
                     <h2>Maker Space</h2>
@@ -141,7 +141,7 @@
             </article>
             <article id="smpuppet" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1I1A3830.JPG" alt="Stop Motion Puppet Molding">
                 </div>
                 <div class="course-container--text">
                     <h2>Stop Motion Puppet Molding</h2>
@@ -150,7 +150,7 @@
             </article>
             <article id="smwardrobe" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/167A3820.JPG" alt="Stop Motion Wardrobe design introduction">
                 </div>
                 <div class="course-container--text">
                     <h2>Stop Motion Wardrobe design introduction</h2>
@@ -159,7 +159,7 @@
             </article>
             <article id="paintingpuppet" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/IMG_0199.JPG" alt="Painting for Stop Motion Puppets">
                 </div>
                 <div class="course-container--text">
                     <h2>Painting for Stop Motion Puppets</h2>
@@ -168,7 +168,7 @@
             </article>
             <article id="miniaturespace" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1G1A2808.JPG" alt="The miniature space">
                 </div>
                 <div class="course-container--text">
                     <h2>The miniature space: design and construction for stop motion sets.</h2>
@@ -177,7 +177,7 @@
             </article>
             <article id="sets" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1I1A4207.JPG" alt="Creation for Stop Motion Sets">
                 </div>
                 <div class="course-container--text">
                     <h2>Creation for Stop Motion Sets</h2>
@@ -186,7 +186,7 @@
             </article>
             <article id="setsprops" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/167A0586.JPG" alt="Sets and props fabrication">
                 </div>
                 <div class="course-container--text">
                     <h2>Sets and props fabrication.</h2>
@@ -195,7 +195,7 @@
             </article>
             <article id="3dmodeling" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1G1A4679.JPG" alt="3D Modeling">
                 </div>
                 <div class="course-container--text">
                     <h2>3D Modeling</h2>
@@ -204,7 +204,7 @@
             </article>
             <article id="scheduling" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/164A6136.JPG" alt="Scheduling for Stop Motion Productions">
                 </div>
                 <div class="course-container--text">
                     <h2>Scheduling for Stop Motion Productions</h2>
@@ -213,7 +213,7 @@
             </article>
             <article id="budgeting" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/164A5113.JPG" alt="Budgeting and pipeline<">
                 </div>
                 <div class="course-container--text">
                     <h2>Budgeting and pipeline</h2>
@@ -223,7 +223,7 @@
             </article>
             <article id="toonboom" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1I1A4307.JPG" alt="Toon Boom Harmony">
                 </div>
                 <div class="course-container--text">
                     <h2>Toon Boom Harmony</h2>
@@ -232,7 +232,7 @@
             </article>
             <article id="sm1" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/164A5526.JPG" alt="Stop Motion Character Animation: Level 1">
                 </div>
                 <div class="course-container--text">
                     <h2>Stop Motion Character Animation: Level 1</h2>
@@ -242,7 +242,7 @@
             </article>
             <article id="sm2" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/164A6246.JPG" alt="Stop Motion Character Animation: Level 2">
                 </div>
                 <div class="course-container--text">
                     <h2>Stop Motion Character Animation: Level 2</h2>
@@ -251,7 +251,7 @@
             </article>
             <article id="sm3" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/164A6774.JPG" alt="Stop Motion Character Animation: Level 3">
                 </div>
                 <div class="course-container--text">
                     <h2>Stop Motion Character Animation: Level 3</h2>
@@ -260,7 +260,7 @@
             </article>
             <article id="sm" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1G1A5084.JPG" alt="Stop Motion Animation">
                 </div>
                 <div class="course-container--text">
                     <h2>Stop Motion Animation</h2>
@@ -269,7 +269,7 @@
             </article>
             <article id="toolkit" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/164A5606.JPG" alt="Photography Toolkit for Stop Motion Animation">
                 </div>
                 <div class="course-container--text">
                     <h2>Photography Toolkit for Stop Motion Animation</h2>
@@ -278,7 +278,7 @@
             </article>
             <article id="smcinema" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/164A7228.JPG" alt="Stop Motion Cinematography">
                 </div>
                 <div class="course-container--text">
                     <h2>Stop Motion Cinematography</h2>
@@ -287,7 +287,7 @@
             </article>
             <article id="musicalcompo" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/164A5903.JPG" alt="Musical composition for animation">
                 </div>
                 <div class="course-container--text">
                     <h2>Musical composition for animation</h2>
@@ -296,7 +296,7 @@
             </article>
             <article id="post" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/1G1A3188.JPG" alt="The Postproduction Supervisor">
                 </div>
                 <div class="course-container--text">
                     <h2>The Postproduction Supervisor Role in the creation of streaming platforms content</h2>
@@ -305,7 +305,7 @@
             </article>
             <article id="bsmpuppets" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/IMG_5421.JPG" alt="Basic Stop Motion Puppets">
                 </div>
                 <div class="course-container--text">
                     <h2>Basic Stop Motion Puppets</h2>
@@ -314,7 +314,7 @@
             </article>
             <article id="hair" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/IMG_6103.JPG" alt="Hair for Stop Motion Puppets">
                 </div>
                 <div class="course-container--text">
                     <h2>Hair for Stop Motion Puppets</h2>
@@ -323,7 +323,7 @@
             </article>
             <article id="smkids" class="course-container">
                 <div class="course-container--img">
-                    <img src="" alt="">
+                    <img src="./assets/img/Taller/IMG_5623.JPG" alt="Stop motion kids">
                 </div>
                 <div class="course-container--text">
                     <h2>Stop motion kids</h2>
