add proyect dolores

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <header id="header">
         <img  class="tdc-logo" src="./assets/img/logo.svg" alt="logo del taller">
         <div class="backgroundVideo">
-            <video onloadedmetadata="this.muted=true" autoplay loop>
-                <source src="./assets/video/ondas-71122.mp4">
-            </video>
+            <iframe src="https://player.vimeo.com/video/795675741?h=8c8507703b" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </div>
             
     </header>
@@ -26,8 +24,8 @@
             </div>
             <section class="container--slider">
                 <article class="container--card">
-                    <a href="training.html#conceptdesign">
-                        <img src="./assets/img/proyectsCard/Rectangle3.png" alt="Concept Desing">
+                    <a href="dolores.html">
+                        <img src="./assets/img/proyectsCard/Rectangle3.png" alt="Dolores image">
                         <div class="overlay">
                             <p>Dolores</p>
                         </div>
@@ -35,7 +33,7 @@
                 </article>
                 <article class="container--card">
                     <a href="training.html#conceptdesign">
-                        <img src="./assets/img/proyectsCard/Rectangle4.png" alt="Concept Desing">
+                        <img src="./assets/img/proyectsCard/Rectangle4.png" alt="Smoke image">
                         <div class="overlay">
                             <p>Smoke</p>
                         </div>
@@ -43,9 +41,25 @@
                 </article>
                 <article class="container--card">
                     <a href="training.html#conceptdesign">
-                        <img src="./assets/img/proyectsCard/Rectangle5.png" alt="Concept Desing">
+                        <img src="./assets/img/proyectsCard/Rectangle5.png" alt="Evasaurio image">
                         <div class="overlay">
                             <p>Evasaurio</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#conceptdesign">
+                        <img src="" alt="Nina & Bonifacio image">
+                        <div class="overlay">
+                            <p>Nina & Bonifacio</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="training.html#conceptdesign">
+                        <img src="" alt="Sira image">
+                        <div class="overlay">
+                            <p>Sira</p>
                         </div>
                     </a>
                 </article>
