add social icons footer

--- a/services.html
+++ b/services.html
@@ -158,7 +158,14 @@
             </ul>
     </section>
     <section class="decoration">
-
+        <div class="line"></div>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/taller_del_chucho/" title="instagram icons"><img src="./assets/icons/insta.png" alt=""></a>
+            <a href="https://www.facebook.com/TallerDelChucho" title="facebook icons"><img src="./assets/icons/fbook.png" alt=""></a>
+            <a href="https://www.linkedin.com/company/taller-del-chucho/mycompany/" title="linkeding icons"><img src="./assets/icons/lnk.png"  alt=""></a>
+        </div>
+        <div class="line"></div>
+        
     </section>
     </footer>
     <script src="./js/main.js"></script>
