add proyect humo

--- a/humo.html
+++ b/humo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/icons/tdc.png">
-    <title>Dolores|TDC</title>
+    <title>Humo|TDC</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width:600px)">
     <link rel="stylesheet" href="./css/desktop.css" media="(min-width:1000px)">
@@ -23,29 +23,21 @@
         <section class="section-proyect">
             <h1>Proyects</h1>
             <div class="ProyectVideo">
-                <iframe src="https://player.vimeo.com/video/832069549?h=36a289bdaa"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/832067491?h=2186bff76d"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <section class="section-det">
             <div class="container-cartel">
-                <img src="./assets/img/Dolores.png" alt="dolores image">
+                <img src="./assets/img/Humo.png" alt="dolores image">
                 <a href="index.html"><span></span></a>        
             </div>
             <div class="container-detail">
-                <div class="detail">
-                    <p>Short film</p>
-                </div>
-                <div class="detail">
-                    <p>7 minutes</p>
-                </div>
-                <div class="detail">
-                    <p>Post Production Stage</p>
-                </div>
+                    <p>Shortfilm in Annecy’s oficial</p>
             </div>
             <div class="proyect--text">
-                <h1>Dolores</h1>
-                <p>by Cecilia Andalón</p>
-                <p>Dolores is a 7 years-old girl that only wants to play, she flees from a fire demon and by mistake falls into a “Tumba de Tiro”, a mortuary compound where she meets two spooky skull ladies made from corn leaves, that wish Dolores to stay, but a little armadillo will try everything to get her out of there.</p>
+                <h1>Smoke</h1>
+                <p>by Rita Basulto</p>
+                <p>Daniel is a boy who lives in his own flesh the concentration camp’s calvary. In this place of nightmare, the boy struggles to not lose contact with her mother, and at the same time tries to understand this new world around him. With the innocence of a child, Daniel faces his deathly fate.</p>
             </div>
         </section>
     </main>
