--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/icons/tdc.png">
     <title>Taller del chucho</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width:600px)">
@@ -32,7 +33,7 @@
                     </a>
                 </article>
                 <article class="container--card">
-                    <a href="training.html#conceptdesign">
+                    <a href="humo.html">
                         <img src="./assets/img/proyectsCard/Rectangle4.png" alt="Smoke image">
                         <div class="overlay">
                             <p>Smoke</p>
