--- a/services.html
+++ b/services.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller del chucho</title>
+    <link rel="icon" href="./assets/icons/tdc.png">
+    <title>Services|TDC</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width:600px)">
     <link rel="stylesheet" href="./css/desktop.css" media="(min-width:1000px)">
